# FFPlayground

./: .gitignore  .pre-commit-config.yaml  FFLPlayground.db  README.md  analytics_ideas.txt  pyproject.toml  requirements-dev.txt  requirements.txt  visuals.ipynb
data/: proteams.csv  sheet.csv
src/: analytics.py  constants.py  espn_cookies.py  ffl_requests.py  ffl_requests_new.py  hydrate_db.py  main.py  requests_library.py  visuals.ipynb
src/scripts/: hydrate_db.py
src/sql/: avg_final_rank.sql  drop_all_tables.sql  get_draft_by_year.sql  get_matchups_by_year.sql  get_matchups_by_year_week.sql  second_highest_scorer.sql  second_lowest_scorer.sql
src/sql/analytics/: lifetime_individual_matchup_record.sql  lifetime_pfa_vs_winpct.sql  lifetime_points_for_against.sql  lifetime_projected_vs_actual.sql  lifetime_starters_vs_bench_points.sql  lifetime_wl_regseason.sql  lifetime_wl_with_playoffs.sql  num_extremely_lucky_wins.sql  num_extremely_unlucky_losses.sql  num_lucky_wins.sql  num_unlucky_losses.sql  select_podium_by_year.sql
src/sql/views/: vw_matchups_with_realnames.sql  vw_pointsagainst_by_week.sql  vw_pointsfor_by_week.sql  vw_weekly_projected_vs_actual.sql  vw_weeklyteamscores.sql
src/streamlit/: app.py
