[project]
name = "FFLPlayground"
dynamic = ["version"]

dependencies = [
  "pandas",
  "requests",
  "sqlalchemy",
  "numpy"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "black==22.3.0",
  "ruff==0.0.263",
  "loguru"
]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
ignore = ["F401"]
line-length = 100