[project]
name = "ffplayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emoji>=2.14.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
]

[tool.ruff]
line-length = 100

[[tool.uv.index]]
name = "artifactory"
url = "https://artifactory-prd.eprod.com/artifactory/api/pypi/bds-pypi/simple"
default = true
secondary = false
